# SPDX-PackageName: python-hashlib-additional
# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
# SPDX-PackageDownloadLocation: https://forge.colobox.com/rfinnie/python-hashlib-additional
# SPDX-FileCopyrightText: © 2019 Ryan Finnie <ryan@finnie.org>
# SPDX-License-Identifier: MIT

[project]
name = "hashlib-additional"
authors = [
    {name = "Ryan Finnie", email = "ryan@finnie.org"},
]
description = "Additional hashlib-compatible hashing digests"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://forge.colobox.com/rfinnie/python-hashlib-additional"

[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "hashlib_additional",
    "hashlib_additional.tests",
]

[tool.setuptools.dynamic]
version = {attr = "hashlib_additional.__version__"}

[tool.black]
line-length = 132
